added more text to see if the sync/commit is working

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>CSCE 190 Portfolio</h1>
         <p>Grace Miller</p>
-        <p>test</p>
+        <p>test to see if sync/commit is working</p>
     </body>
 </html>
