--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSCE 190 Website</title>
+        <title>CSCE 190 Website: Grace Miller</title>
     </head>
     <body>
-        <h1>CSCE 190 Portfolio</h1>
-        <p>Grace Miller</p>
-        <p>test to see if sync/commit is working</p>
+        <h1>Grace Miller - CSCE 190 Portfolio</h1>
+        <div class="about">
+            <h2>About me</h2>
+            <p>One of my main goals in life is to get a job that positively contributes to society in some 
+way, such as making programs/websites that can help people. I hope to achieve a higher 
+level of knowledge. Finally, I want to live a life filled with happiness and positivity, and
+to spread happiness to others as well.</p>
+        </div>
+        <div class="skills">
+            <h2>Skills</h2>
+        </div>
+        <div class="Projects">
+            <h2>Highlighted projects</h2>
+        </div>
+        <div class="Contact">
+            <h2>Contact me</h2>
+        </div>
     </body>
 </html>
