--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSCE 190 Website: Grace Miller</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Grace Miller - CSCE 190 Portfolio</h1>
