--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@ to spread happiness to others as well.</p>
             <h2>Highlighted projects</h2>
             <!-- Problem Statement Assignment -->
              <section class="project">
-                <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
-                <a href="files/statement.pdf"><img src="images/problem.png"></a>
-                <p>One sentence to describe your problem</p>
+                <a href="files/Problem Statement.pdf"><h3>Problem Statement</h3></a>
+                <a href="files/Problem Statement.pdf"><img src="images/Problem Statement.png"></a>
+                <p>Many people who live in USC dorms may experience exposure to mold. The root cause of this issue is the humidity 
+                    and moisture in the South Carolina climate that fosters an environment that mold easily grows in.</p>
             </section>
         </div>
         <div class="Contact">
