--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <div class="about">
             <h2>About me</h2>
             <p>One of my main goals in life is to get a job that positively contributes to society in some 
-way, such as making programs/websites that can help people. I hope to achieve a higher 
-level of knowledge. Finally, I want to live a life filled with happiness and positivity, and
+                way, such as making programs/websites that can help people. I hope to achieve a higher 
+                level of knowledge. Finally, I want to live a life filled with happiness and positivity, and
 to spread happiness to others as well.</p>
         </div>
         <div class="skills">
@@ -20,8 +20,10 @@ to spread happiness to others as well.</p>
             <h2>Highlighted projects</h2>
             <!-- Problem Statement Assignment -->
              <section class="project">
-                <a href="files/Problem Statement.pdf"><h3>Problem Statement</h3></a>
-                <a href="files/Problem Statement.pdf"><img src="images/Problem Statement.png"></a>
+                <a href="files/Problem Statement.pdf">
+                    <h3>Problem Statement</h3></a>
+                <a href="files/Problem Statement.pdf">
+                    <img src="images/Problem Statement.png"></a>
                 <p>Many people who live in USC dorms may experience exposure to mold. The root cause of this issue is the humidity 
                     and moisture in the South Carolina climate that fosters an environment that mold easily grows in.</p>
             </section>
