--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <h1>Grace Miller - CSCE 190 Portfolio</h1>
         <div class="about">
             <h2>About me</h2>
-            <p>One of my main goals in life is to get a job that positively contributes to society in some 
-                way, such as making programs/websites that can help people. I hope to achieve a higher 
-                level of knowledge. Finally, I want to live a life filled with happiness and positivity, and
-to spread happiness to others as well.</p>
+            <p>One of my main goals in life is to get a job that positively contributes to society in some way, 
+                such as making programs/websites that can help people. I hope to achieve a higher level of 
+                knowledge. Finally, I want to live a life filled with happiness and positivity, and
+                to spread happiness to others as well.</p>
         </div>
         <div class="skills">
             <h2>Skills</h2>
