added Affinity Diagram

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                 <p>Many people who live in USC dorms may experience exposure to mold. The root cause of this issue is the humidity 
                     and moisture in the South Carolina climate that fosters an environment that mold easily grows in.</p>
             </section>
+            <!--Affinity Diagram Assignment -->
+            <section class="project">
+                <a href="files/Affinity_DOC.pdf">
+                    <h3>Affinity Diagram</h3></a>
+                    <a href="files/Affinity_DOC.pdf">
+                    <img src="images/Affinity_IMG.png"></a>
+                    <p>This Diagram was used to help brainstorm solutions and issues related to the problem statement.</p>
+</section>
         </div>
         <div class="Contact">
             <h2>Contact me</h2>
