--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </section>
             <!--Affinity Diagram Assignment -->
             <section class="project">
-                <a href="files/Affinity_DOC.pdf">
+                <a href="files/Affinity_Diagram.pdf">
                     <h3>Affinity Diagram</h3></a>
-                    <a href="files/Affinity_DOC.pdf">
+                    <a href="files/Affinity_Diagram.pdf">
                     <img src="images/Affinity_IMG.png"></a>
                     <p>This Diagram was used to help brainstorm solutions and issues related to the problem statement.</p>
 </section>
