added more style.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h2>About me</h2>
             <p>One of my main goals in life is to get a job that positively contributes to society in some way, 
                 such as making programs/websites that can help people. I hope to achieve a higher level of 
-                knowledge. Finally, I want to live a life filled with happiness and positivity, and
+                knowledge. Finally, I want to live a life filled with positivity, and
                 to spread happiness to others as well.</p>
         </div>
         <div class="skills">
