--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
                     <a href="files/Affinity Diagram.pdf">
                     <img src="images/Affinity IMG.png"></a>
                     <p>This Diagram was used to help brainstorm solutions and issues related to the problem statement.</p>
+                </section>
+                <!--Sketches Assignment-->
+                <section class="project">
+                    <a href="files/Sketches_DOC.pdf">
+                        <h3>Sketches</h3></a>
+                    <a href="files/Sketches_DOC.pdf">
+                        <img src="images/Sketches_IMG.png"></a>
+                    <p>Brief description about the sketches</p>
 </section>
         </div>
         <div class="Contact">
