--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="skills">
             <h2>Skills</h2>
         </div>
-        <div class="Projects">
+        <div class="projects">
             <h2>Highlighted projects</h2>
             <!-- Problem Statement Assignment -->
              <section class="project">
@@ -31,18 +31,18 @@
             <section class="project">
                 <a href="files/Affinity Diagram.pdf">
                     <h3>Affinity Diagram</h3></a>
-                    <a href="files/Affinity Diagram.pdf">
+                <a href="files/Affinity Diagram.pdf">
                     <img src="images/Affinity IMG.png"></a>
-                    <p>This Diagram was used to help brainstorm solutions and issues related to the problem statement.</p>
-                </section>
-                <!--Sketches Assignment-->
-                <section class="project">
-                    <a href="files/Sketches_DOC.pdf">
-                        <h3>Sketches</h3></a>
-                    <a href="files/Sketches_DOC.pdf">
-                        <img src="images/Sketches_IMG.png"></a>
-                    <p>Brief description about the sketches</p>
-</section>
+                <p>This Diagram was used to help brainstorm solutions and issues related to the problem statement.</p>
+            </section>
+            <!--Sketches Assignment-->
+            <section class="project">
+                <a href="files/Sketches_DOC.pdf">
+                    <h3>Sketches</h3></a>
+                <a href="files/Sketches_DOC.pdf">
+                    <img src="images/Sketches_IMG.png"></a>
+                <p>Brief description about the sketches</p>
+            </section>
         </div>
         <div class="Contact">
             <h2>Contact me</h2>
