--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     <h3>Sketches</h3></a>
                 <a href="files/Sketches_DOC.pdf">
                     <img src="images/Sketches_IMG.png"></a>
-                <p>Brief description about the sketches</p>
+                <p>These sketches depict hypothetical situations in which a user navigates the Moldbuster 
+                    app for a certain purpose.</p>
             </section>
         </div>
         <div class="Contact">
