--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>Skills</h2>
             <span>
                 My resume: <a href="files/resume.pdf">PDF version</a>
-                | <a href="resume.html">HTML version</a>
+                | <a href="table_res.html">HTML version</a>
             </span>
         </div>
         <div class="projects">
