added some resume text

--- a/table_res.html
+++ b/table_res.html
@@ -11,8 +11,8 @@
     <!-- Header Section -->
     <tr>
       <td colspan="2">
-        <h1>John Doe</h1>
-        <p>Email: john.doe@example.com | Phone: (123) 456-7890 | Location: New York, NY</p>
+        <h1>Grace Miller</h1>
+        <p>Email: Gem14@email.sc.edu | Phone: (123) 456-7890 | Location: Columbia, SC</p>
         <hr>
       </td>
     </tr>
@@ -21,9 +21,11 @@
     <tr>
       <td width="25%"><h2>Education</h2></td>
       <td>
-        <strong>University of Example</strong><br>
-        B.S. in Computer Science, 2020<br>
-        Graduated with Honors
+        <strong>University of South Carolina</strong><br>
+        B.S. in Computer Information Systems, 2029 | Minor: Buisness Administration<br>
+        <strong>Awards</strong>: Summa Cum Laude
+        <strong>Honors</strong>: Capstone Scholar
+        <strong>Scholarships</strong>: Palmetto Fellows
       </td>
     </tr>
 
