fixed formatting issue

--- a/table_res.html
+++ b/table_res.html
@@ -22,10 +22,10 @@
       <td width="25%"><h2>Education</h2></td>
       <td>
         <strong>University of South Carolina</strong><br>
-        B.S. in Computer Information Systems, 2029 | Minor: Buisness Administration<br>
-        <strong>Awards</strong>: Summa Cum Laude
-        <strong>Honors</strong>: Capstone Scholar
-        <strong>Scholarships</strong>: Palmetto Fellows
+        B.S. in Computer Information Systems, 2029 | <strong>Minor</strong>: Buisness Administration<br>
+        <strong>Awards</strong>: Summa Cum Laude<br>
+        <strong>Honors</strong>: Capstone Scholar<br>
+        <strong>Scholarships</strong>: Palmetto Fellows<br>
       </td>
     </tr>
 
