added underline text

--- a/table_res.html
+++ b/table_res.html
@@ -19,7 +19,7 @@
 
     <!-- Education Section -->
     <tr>
-      <td width="25%"><h2>Education</h2></td>
+      <td width="25%"><h2><u>Education</u></h2></td>
       <td>
         <strong>University of South Carolina</strong><br>
         B.S. in Computer Information Systems, 2029 | <strong>Minor</strong>: Buisness Administration<br>
@@ -31,7 +31,7 @@
 
     <!-- Work Experience Section -->
     <tr>
-      <td><h2>Work Experience</h2></td>
+      <td><h2><u>Work Experience</u></h2></td>
       <td>
         <strong>Software Engineer</strong>, TechCorp Inc. (2021–Present)<br>
         <ul>
@@ -50,7 +50,7 @@
 
     <!-- Skills Section -->
     <tr>
-      <td><h2>Skills</h2></td>
+      <td><h2><u>Skills</u></h2></td>
       <td>
         <ul>
           <li>Programming: JavaScript, Python, C++</li>
