--- a/table_res.html
+++ b/table_res.html
@@ -12,7 +12,8 @@
     <tr>
       <td colspan="2">
         <h1>Grace Miller</h1>
-        <p>Email: Gem14@email.sc.edu | Phone: (123) 456-7890 | Location: Columbia, SC</p>
+        <p><strong>Email</strong>: Gem14@email.sc.edu | <strong>Phone</strong>: (123) 456-7890 | 
+            <strong>Location</strong>: Columbia, SC</p>
         <hr>
       </td>
     </tr>
@@ -21,7 +22,7 @@
     <tr>
       <td width="25%"><h2><u>Education</u></h2></td>
       <td>
-        <strong>University of South Carolina</strong><br>
+        <strong>University of South Carolina - Columbia</strong><br>
         B.S. in Computer Information Systems, 2029 | <strong>Minor</strong>: Buisness Administration<br>
         <strong>Awards</strong>: Summa Cum Laude<br>
         <strong>Honors</strong>: Capstone Scholar<br>
