added experience section

--- a/table_res.html
+++ b/table_res.html
@@ -32,19 +32,21 @@
 
     <!-- Work Experience Section -->
     <tr>
-      <td><h2><u>Work Experience</u></h2></td>
+      <td><h2><u>Relevant Experience</u></h2></td>
       <td>
-        <strong>Software Engineer</strong>, TechCorp Inc. (2021–Present)<br>
+        <strong>Culvers - Simpsonville, SC</strong>, Team Member (2023–2025)<br>
         <ul>
-          <li>Developed and maintained web applications using JavaScript and Python.</li>
-          <li>Collaborated with a cross-functional team to deliver high-quality software on time.</li>
-          <li>Improved application performance by 25% through code optimization.</li>
+          <li>Communicated Effectively with coworkers and managers</li>
+          <li>Arrived to work promptly and early.</li>
+          <li>Memorized most of the menu and was able to recite what menu items included.</li>
+          <li>Became proficient in customer service and conversing with customers</li> 
         </ul>
 
-        <strong>Intern Developer</strong>, WebStart LLC (2019–2020)<br>
+        <strong>Algorithm Design I</strong>, Student (2025–2025)<br>
         <ul>
-          <li>Assisted in building front-end interfaces using HTML, CSS, and JavaScript.</li>
-          <li>Participated in daily agile meetings and contributed to sprint planning.</li>
+          <li>Learned how to use Java to create and alter programs.</li>
+          <li>Learned the language and terms used with programming in Java .</li>
+          <li>Organized code in an effective manor</li> 
         </ul>
       </td>
     </tr>
