added skill and activities sections

--- a/table_res.html
+++ b/table_res.html
@@ -34,7 +34,7 @@
     <tr>
       <td><h2><u>Relevant Experience</u></h2></td>
       <td>
-        <strong>Culvers - Simpsonville, SC</strong>, Team Member (2023–2025)<br>
+        <strong>Culvers - Simpsonville, SC</strong>, Team Member | April 2023 – July 2025<br>
         <ul>
           <li>Communicated Effectively with coworkers and managers</li>
           <li>Arrived to work promptly and early.</li>
@@ -42,11 +42,11 @@
           <li>Became proficient in customer service and conversing with customers</li> 
         </ul>
 
-        <strong>Algorithm Design I</strong>, Student (2025–2025)<br>
+        <strong>Algorithm Design I</strong>, Student | August 2025 – December 2025<br>
         <ul>
           <li>Learned how to use Java to create and alter programs.</li>
-          <li>Learned the language and terms used with programming in Java .</li>
-          <li>Organized code in an effective manor</li> 
+          <li>Learned the language and terms used with programming in Java.</li>
+          <li>Organized code in an effective manor.</li> 
         </ul>
       </td>
     </tr>
@@ -56,9 +56,22 @@
       <td><h2><u>Skills</u></h2></td>
       <td>
         <ul>
-          <li>Programming: JavaScript, Python, C++</li>
-          <li>Web: HTML5, CSS3, React, Node.js</li>
-          <li>Tools: Git, Docker, AWS</li>
+          <li><strong>Programming</strong>: JavaScript</li>
+          <li><strong>Web</strong>: HTML5</li>
+          <li><strong>Applications</strong>: Git, Word, Teams, Micrososft Office, Zoom</li>
+        </ul>
+      </td>
+    </tr>
+
+    <!-- Interests Section -->
+    <tr>
+      <td><h2><u>Interests/Activities</u></h2></td>
+      <td>
+        <ul>
+          <li>Involved in Capstone Scholar activities .</li>
+          <li>Interested in team and business management.</li>
+          <li>Interested in Technology and data management.</li>
+          <li>Pursuing Travel abroad opportunities.</li>
         </ul>
       </td>
     </tr>
