--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
                 <p>These sketches depict hypothetical situations in which a user navigates the Moldbuster 
                     app for a certain purpose.</p>
             </section>
+            <section class="project">
+            <a href="https://github.com/">
+                <h3>Algorithmic Design Final Project</h3>
+            </a>
+            <a href="https://github.com/CSE-GraceMiller/Java-Code-145">
+                <img src="images/algorithmic_design.png">
+            </a>
+            <p>Brief description of the repo</p>
+        </section>
         </div>
         <div class="Contact">
             <h2>Contact me</h2>
