--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     app for a certain purpose.</p>
             </section>
             <section class="project">
-            <a href="https://github.com/">
+            <a href="https://github.com/CSE-GraceMiller/Java-Code-145">
                 <h3>Algorithmic Design Final Project</h3>
             </a>
             <a href="https://github.com/CSE-GraceMiller/Java-Code-145">
