added Description for new repo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <a href="https://github.com/CSE-GraceMiller/Java-Code-145">
                 <img src="images/algorithmic_design.png">
             </a>
-            <p>Brief description of the repo</p>
+            <p>This Repo conatins java code that i did for my CSCE 145 class, 
+                it was a choose your own adventure game</p>
         </section>
         </div>
         <div class="Contact">
